# pool-stratum

./: CMakeLists.txt  main.cpp
include/: CMakeLists.txt
include/jsonrpccxx/: dispatcher.hpp  server.hpp
stratum/: CMakeLists.txt  stratum.cpp  stratum.h  stratum_protocol.cpp  stratum_protocol.h
